# investment-gpt

./: ADVANCED_MODE_GUIDE.md  DEBUG_MODE.md  GETTING_STARTED.md  INSTALLATION_COMPLETE.md  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.streamlit/: config.toml
agents/: analysis.py  ceo_agent.py  news_scraper.py  stock_scraper.py
utils/: api_clients.py  data_processor.py
