[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-gpt"
version = "0.1.0"
description = "Multi-agent NSE stock analysis app using Streamlit"
readme = "README.md"
authors = [{ name = "Ayush" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "python-dotenv>=1.0.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.4.0",
    "ta>=0.10.2",
    "anthropic>=0.7.1",
    "google-generativeai>=0.3.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["agents*", "utils*"]
exclude = ["data*"]
